--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">HodohodAdmin</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">HodHod</string>
+    <string name="title_activity_maps">@string/app_name</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
